@@ -53,6 +53,7 @@ For fixes or providing information which led to a fix:
            Matt Kraai
            Jeff Long
 	  Marco Maggi
+        Gregory Marton
             Dan McMahill
         Han-Wen Nienhuys
             Jan Nieuwenhuizen
